# crossGraphKclub

./: .gitignore  CMakeLists.txt  README.md  classes.cpp  classes.h  functions.cpp  functions.h  main.cpp  tasks.txt  tasksCrossGraph.txt
instances/BG_10/: graph_200_0.1_3.txt  graph_200_0.1_6.txt
instances/BG_15/: graph_200_0.15_8.txt
instances/BG_2.5.025/: graph_200_0.025_1.txt  graph_200_0.025_7.txt  graph_200_0.025_9.txt
instances/VB_0.5/: matrix_300_003_007_5.txt  matrix_300_003_007_6.txt  matrix_300_003_007_7.txt  matrix_300_003_007_8.txt
instances/VB_1/: matrix_300_005_015_10.txt  matrix_300_005_015_3.txt  matrix_300_005_015_9.txt
instances/VB_1.5/: matrix_300_010_020_4.txt  matrix_300_010_020_6.txt  matrix_300_010_020_7.txt  matrix_300_010_020_8.txt
instances/graph_200_0.025/: graph_200_0.025_10.txt  graph_200_0.025_2.txt  graph_200_0.025_3.txt  graph_200_0.025_4.txt  graph_200_0.025_5.txt  graph_200_0.025_6.txt  graph_200_0.025_8.txt
instances/graph_200_0.05/: graph_200_0.05_1.txt  graph_200_0.05_10.txt  graph_200_0.05_2.txt  graph_200_0.05_3.txt  graph_200_0.05_4.txt  graph_200_0.05_5.txt  graph_200_0.05_6.txt  graph_200_0.05_7.txt  graph_200_0.05_8.txt  graph_200_0.05_9.txt
instances/graph_200_0.1/: graph_200_0.1_1.txt  graph_200_0.1_10.txt  graph_200_0.1_2.txt  graph_200_0.1_4.txt  graph_200_0.1_5.txt  graph_200_0.1_7.txt  graph_200_0.1_8.txt  graph_200_0.1_9.txt
instances/graph_200_0.15/: graph_200_0.15_1.txt  graph_200_0.15_10.txt  graph_200_0.15_2.txt  graph_200_0.15_3.txt  graph_200_0.15_4.txt  graph_200_0.15_5.txt  graph_200_0.15_6.txt  (+2 more)
(+79 files in other folders)
